# src/app/api/models/allocation.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * A project with references to the students assigned to this project as part of the matching result
+ */
+export interface Allocation {
+  projectId: string;
+  studentIds: Array<string>;
+}
