# src/app/api/models/comment.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Comment {
+  author: string;
+  date: string;
+  description: string;
+  text: string;
+}
