# src/app/api/models/skill-proficiency.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+
+/**
+ * Proficiency in a skill
+ */
+export enum SkillProficiency {
+  Novice = 'Novice',
+  Intermediate = 'Intermediate',
+  Advanced = 'Advanced',
+  Expert = 'Expert'
+}
