# src/app/api/models/student-skill.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+import { SkillProficiency } from '../models/skill-proficiency';
+export interface StudentSkill {
+  id: string;
+  proficiency: SkillProficiency;
+}
