# src/app/api/services.ts
@@ -1,0 +1,4 @@
+export { ProjectsService } from './services/projects.service';
+export { StudentsService } from './services/students.service';
+export { AllocationsService } from './services/allocations.service';
+export { SkillsService } from './services/skills.service';
